--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.0'
     id 'io.spring.dependency-management' version '1.1.6'
+    id 'com.google.cloud.tools.jib' version '3.4.0' // Docker 사용하지 않고 컨테이너 이미지 빌드, 컨테이너 레지스트리(Docker Hub, Google Container Registry, AWS ECR 등) 푸쉬하는 도구
 }
 
 group = 'com.sns'
@@ -28,4 +29,18 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+// 쿠버네티스 세팅 추가
+jib {
+    from {
+        image = 'openjdk:21'
+    }
+    to {
+        image = '638597541124.dkr.ecr.ap-northeast-2.amazonaws.com/feed-server' // repository uri
+        tags = ['0.0.1']
+    }
+    container {
+        creationTime = 'USE_CURRENT_TIMESTAMP'
+    }
 }
