--- a/k8s/feed-deploy.yaml
+++ b/k8s/feed-deploy.yaml
@@ -21,6 +21,8 @@ spec:
           env: # config 별도 분리 가능
             - name: SPRING_PROFILES_ACTIVE
               value: dev
+            - name: USER_SERVICE
+              value: http://user-service.sns.svc.cluster.local:8080
           envFrom:
             - configMapRef:
                 name: mysql-config
