[feat] Kafka 활용한 애플리케이션 성능 - 피드 생성 시 카프카로 topic 전송하게 변경

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -8,3 +8,8 @@ spring:
     url: jdbc:mysql://localhost:3306/sns
     username: sns
     password: pass!!
+  kafka:
+    bootstrap-servers: localhost:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
